--- a/LunarBot/Lunar.Bot.csproj
+++ b/LunarBot/Lunar.Bot.csproj
@@ -1,20 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>0.0.2.0</AssemblyVersion>
-    <FileVersion>0.0.2.0</FileVersion>
-    <Version>0.0.2</Version>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.0.0.0</FileVersion>
+    <Version>0.1.0</Version>
     <Description>Makes it easier to create Telegram and Discord bots</Description>
     <Copyright>Sergio Flores</Copyright>
     <PackageProjectUrl>https://github.com/Relfos/LunarBot</PackageProjectUrl>
     <PackageLicenseUrl>https://github.com/Relfos/LunarBot/blob/master/LICENSE</PackageLicenseUrl>
     <RepositoryUrl>https://github.com/Relfos/LunarBot</RepositoryUrl>
     <PackageTags>bot chat discord telegram</PackageTags>
+    <RootNamespace>LunarLabs.Bots</RootNamespace>
+    <AssemblyName>LunarLabs.Bots</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Discord.Net.Core" Version="1.0.2" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="1.0.2" />
+    <PackageReference Include="LunarParser" Version="1.1.0" />
     <PackageReference Include="Telegram.Bot" Version="14.8.0" />
   </ItemGroup>
 
