--- a/LunarBot/Lunar.Bot.csproj
+++ b/LunarBot/Lunar.Bot.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>0.1.8.0</AssemblyVersion>
-    <FileVersion>0.1.8.0</FileVersion>
-    <Version>0.1.8</Version>
+    <AssemblyVersion>0.1.9.0</AssemblyVersion>
+    <FileVersion>0.1.9.0</FileVersion>
+    <Version>0.1.9</Version>
     <Description>Makes it easier to create Telegram and Discord bots</Description>
     <Copyright>Sergio Flores</Copyright>
     <PackageProjectUrl>https://github.com/Relfos/LunarBot</PackageProjectUrl>
@@ -19,7 +19,7 @@
   <ItemGroup>
     <PackageReference Include="Discord.Net.Core" Version="1.0.2" />
     <PackageReference Include="Discord.Net.WebSocket" Version="1.0.2" />
-    <PackageReference Include="LunarParser" Version="1.1.2" />
+    <PackageReference Include="LunarLabs.Parser" Version="1.2.4" />
     <PackageReference Include="Telegram.Bot" Version="14.10.0" />
   </ItemGroup>
 
